video spacing fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -268,6 +268,10 @@ body {
           }
         }
       }
+      .segment-video {
+        background: none;
+        text-align: center;
+      }
       &.no-mg {
         margin: 0 0; padding: 0;
       }
